Use scoped API endpoint and browsable URL